# stream_stash_htmx

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  download_tailwind.sh
src/: main.rs
src/routes/: index_router.rs  mod.rs
src/views/: mod.rs
src/views/components/: mod.rs  simple_component.rs
src/views/layouts/: base_layout.rs  main_layout.rs  mod.rs
src/views/pages/: main_page.rs  mod.rs
tailwind/: tailwind.css
