[package]
name = "stream_stash_htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
hypertext = { version = "0.12.1", features = ["axum", "htmx"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing-subscriber = "0.3.22"
axum-htmx = { version = "0.8.1", features = ["auto-vary"] }
